# boti

./: .gitignore  LICENSE  Makefile  README.es.md  README.fr.md  README.md  pyproject.toml
examples/: README.md  async_resource.py  filesystem_config.py  filesystem_resource.py  filesystem_supported_backends.py  logger.py  profile_logger_load.py  profile_path_validation.py  profile_pii_redaction.py  project_environment.py  project_service_runtime.py  secure_resource.py  simple_resource.py
notebooks/: 99_TestS3Connections.ipynb
src/boti/: __init__.py  main.py
src/boti/core/: __init__.py  filesystem.py  logger.py  logger_filters.py  logger_handlers.py  logger_runtime.py  managed_resource.py  models.py  project.py  secure_io.py  security.py  settings.py
tests/: conftest.py
tests/core/: test_filesystem.py  test_lifecycle.py  test_logger.py  test_package_boundaries.py  test_security.py  test_settings.py  test_top_level_api.py
