[project]
name = "boti"
version = "0.1.0"
description = "Core infrastructure for the Boti ecosystem"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fsspec>=2026.3.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
boti = "boti.main:main"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["boti", "boti.core*"]

[tool.setuptools.package-data]
boti = ["py.typed"]
